# delineator

./: .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/development/: watershed-delineation.md
docs/reference/: LandXML-1.2.xsd.xml  jblindsay-whitebox-tools.md
docs/user/: configuration.md  getting-started.md  troubleshooting.md  understanding-results.md
perf/: README.md  compare_runs.py  findings.md  runs.md
src/delineator/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/delineator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/delineator/geometry/: __init__.py  rasterize.py  tin.py
src/delineator/hydrology/: __init__.py  flow.py  preprocessing.py  watershed.py
src/delineator/output/: __init__.py  boundaries.py  reports.py
src/delineator/parsers/: __init__.py  landxml.py  study_points.py
src/delineator/utils/: __init__.py  logging.py  validation.py
tests/data/: sample.xml
tests/output/: pour_points.dbf  pour_points.prj  pour_points.shp  pour_points.shx  report.json  watersheds.dbf  watersheds.shp  watersheds.shx
