[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delineator"
version = "0.1.0"
description = "Watershed delineation automation from LandXML TIN surfaces using WhiteBox Tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Delineator Contributors"}
]
keywords = ["watershed", "hydrology", "GIS", "LandXML", "TIN", "DEM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "whitebox>=2.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "rasterio>=1.3.0",
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "pyproj>=3.3.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
delineator = "delineator.cli:main"

[project.urls]
Homepage = "https://github.com/example/delineator"
Documentation = "https://github.com/example/delineator#readme"
Repository = "https://github.com/example/delineator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=delineator --cov-report=term-missing"
